src/main/java/darksword/interpreter/generated/LLVMIRParser.java
// Generated from ../src/darksword/interpreter/generated/LLVMIR.g4 by ANTLR 4.7.2

package darksword.interpreter.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LLVMIRParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, IntType = 52,
            VoidType = 53, LabelType = 54, GlobalReg = 55, LocalReg = 56, NullptrConstant = 57,
            BoolConstant = 58, StringConstant = 59, LinkageType = 60, PreemptionSpecifiers = 61,
            VisibilityStyles = 62, GlobalWord = 63, UnnamedAddr = 64, FuncAttr = 65, ParaAttr = 66,
            IntegerLiteral = 67, Identifier = 68, WhitespaceEater = 69, NewlineEater = 70,
            LineCommentEater = 71, EndZero = 72, EscapeEnter = 73, EscapeBackslash = 74, EscapeQuote = 75,
            StringLiteral = 76, InfoStr = 77;
    public static final int
            RULE_rootLLVMIR = 0, RULE_targetInfo = 1, RULE_sourceFn = 2, RULE_dataLayout = 3,
            RULE_targetTriple = 4, RULE_initExp = 5, RULE_globalDecl = 6, RULE_classDecl = 7,
            RULE_funcCall = 8, RULE_funcInfo = 9, RULE_funcDecl = 10, RULE_funcDef = 11,
            RULE_basicBlock = 12, RULE_instDest = 13, RULE_gepOffset = 14, RULE_phiBranch = 15,
            RULE_cmpOp = 16, RULE_binaryOp = 17, RULE_instruction = 18, RULE_atom = 19,
            RULE_alignment = 20, RULE_type = 21, RULE_arrayType = 22, RULE_basicType = 23,
            RULE_integerConstant = 24;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public LLVMIRParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "rootLLVMIR", "targetInfo", "sourceFn", "dataLayout", "targetTriple",
                "initExp", "globalDecl", "classDecl", "funcCall", "funcInfo", "funcDecl",
                "funcDef", "basicBlock", "instDest", "gepOffset", "phiBranch", "cmpOp",
                "binaryOp", "instruction", "atom", "alignment", "type", "arrayType",
                "basicType", "integerConstant"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'source_filename'", "'='", "'target'", "'datalayout'", "'triple'",
                "'zeroinitializer'", "'type'", "'{'", "','", "'}'", "'('", "')'", "'declare'",
                "'define'", "':'", "'['", "']'", "'sgt'", "'sge'", "'slt'", "'sle'",
                "'eq'", "'ne'", "'add'", "'sub'", "'mul'", "'sdiv'", "'srem'", "'shl'",
                "'ashr'", "'and'", "'or'", "'xor'", "'alloca'", "'bitcast'", "'to'",
                "'trunc'", "'zext'", "'br'", "'call'", "'getelementptr'", "'inbounds'",
                "'icmp'", "'load'", "'store'", "'ret'", "'phi'", "'align'", "'*'", "'x'",
                "'-'", null, "'void'", "'label'", null, null, "'null'", null, null, null,
                null, null, null, null, "'nounwind'", "'noalias'", null, null, null,
                null, null, "'\\00'", "'\\n'", "'\\\\'", "'\\\"'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, "NumType", "VoidType", "LabelType", "GlobalReg",
                "LocalReg", "NullptrConstant", "BoolConstant", "StringConstant", "LinkageType",
                "PreemptionSpecifiers", "VisibilityStyles", "GlobalWord", "UnnamedAddr",
                "FuncAttr", "ParaAttr", "IntegerLiteral", "Identifier", "WhitespaceEater",
                "NewlineEater", "LineCommentEater", "EndZero", "EscapeEnter", "EscapeBackslash",
                "EscapeQuote", "StringLiteral", "InfoStr"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "LLVMIR.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final RootLLVMIRContext rootLLVMIR() throws RecognitionException {
        RootLLVMIRContext _localctx = new RootLLVMIRContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_rootLLVMIR);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(57);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__12) | (1L << T__13) | (1L << GlobalReg) | (1L << LocalReg))) != 0)) {
                    {
                        setState(55);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case T__0:
                            case T__2: {
                                setState(50);
                                targetInfo();
                            }
                            break;
                            case T__12: {
                                setState(51);
                                funcDecl();
                            }
                            break;
                            case T__13: {
                                setState(52);
                                funcDef();
                            }
                            break;
                            case GlobalReg: {
                                setState(53);
                                globalDecl();
                            }
                            break;
                            case LocalReg: {
                                setState(54);
                                classDecl();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(59);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(60);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TargetInfoContext targetInfo() throws RecognitionException {
        TargetInfoContext _localctx = new TargetInfoContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_targetInfo);
        try {
            setState(65);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(62);
                    sourceFn();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(63);
                    dataLayout();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(64);
                    targetTriple();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SourceFnContext sourceFn() throws RecognitionException {
        SourceFnContext _localctx = new SourceFnContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_sourceFn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(67);
                match(T__0);
                setState(68);
                match(T__1);
                setState(69);
                match(InfoStr);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DataLayoutContext dataLayout() throws RecognitionException {
        DataLayoutContext _localctx = new DataLayoutContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_dataLayout);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(71);
                match(T__2);
                setState(72);
                match(T__3);
                setState(73);
                match(T__1);
                setState(74);
                match(InfoStr);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TargetTripleContext targetTriple() throws RecognitionException {
        TargetTripleContext _localctx = new TargetTripleContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_targetTriple);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(T__2);
                setState(77);
                match(T__4);
                setState(78);
                match(T__1);
                setState(79);
                match(InfoStr);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InitExpContext initExp() throws RecognitionException {
        InitExpContext _localctx = new InitExpContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_initExp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(83);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__50:
                    case GlobalReg:
                    case LocalReg:
                    case NullptrConstant:
                    case BoolConstant:
                    case StringConstant:
                    case IntegerLiteral: {
                        setState(81);
                        atom();
                    }
                    break;
                    case T__5: {
                        setState(82);
                        match(T__5);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GlobalDeclContext globalDecl() throws RecognitionException {
        GlobalDeclContext _localctx = new GlobalDeclContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_globalDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(85);
                match(GlobalReg);
                setState(86);
                match(T__1);
                setState(88);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LinkageType) {
                    {
                        setState(87);
                        match(LinkageType);
                    }
                }

                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == PreemptionSpecifiers) {
                    {
                        setState(90);
                        match(PreemptionSpecifiers);
                    }
                }

                setState(94);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == VisibilityStyles) {
                    {
                        setState(93);
                        match(VisibilityStyles);
                    }
                }

                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == UnnamedAddr) {
                    {
                        setState(96);
                        match(UnnamedAddr);
                    }
                }

                setState(99);
                match(GlobalWord);
                setState(100);
                type(0);
                setState(101);
                initExp();
                setState(103);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__8) {
                    {
                        setState(102);
                        alignment();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassDeclContext classDecl() throws RecognitionException {
        ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_classDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(LocalReg);
                setState(106);
                match(T__1);
                setState(107);
                match(T__6);
                setState(108);
                match(T__7);
                setState(117);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << IntType) | (1L << VoidType) | (1L << LabelType) | (1L << LocalReg))) != 0)) {
                    {
                        setState(109);
                        type(0);
                        setState(114);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__8) {
                            {
                                {
                                    setState(110);
                                    match(T__8);
                                    setState(111);
                                    type(0);
                                }
                            }
                            setState(116);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(119);
                match(T__9);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncCallContext funcCall() throws RecognitionException {
        FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_funcCall);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(122);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ParaAttr) {
                    {
                        setState(121);
                        match(ParaAttr);
                    }
                }

                setState(124);
                type(0);
                setState(125);
                match(GlobalReg);
                setState(126);
                match(T__10);
                setState(141);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << IntType) | (1L << VoidType) | (1L << LabelType) | (1L << LocalReg))) != 0)) {
                    {
                        setState(127);
                        type(0);
                        setState(129);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (((((_la - 51)) & ~0x3f) == 0 && ((1L << (_la - 51)) & ((1L << (T__50 - 51)) | (1L << (GlobalReg - 51)) | (1L << (LocalReg - 51)) | (1L << (NullptrConstant - 51)) | (1L << (BoolConstant - 51)) | (1L << (StringConstant - 51)) | (1L << (IntegerLiteral - 51)))) != 0)) {
                            {
                                setState(128);
                                atom();
                            }
                        }

                        setState(138);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__8) {
                            {
                                {
                                    setState(131);
                                    match(T__8);
                                    setState(132);
                                    type(0);
                                    setState(134);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                    if (((((_la - 51)) & ~0x3f) == 0 && ((1L << (_la - 51)) & ((1L << (T__50 - 51)) | (1L << (GlobalReg - 51)) | (1L << (LocalReg - 51)) | (1L << (NullptrConstant - 51)) | (1L << (BoolConstant - 51)) | (1L << (StringConstant - 51)) | (1L << (IntegerLiteral - 51)))) != 0)) {
                                        {
                                            setState(133);
                                            atom();
                                        }
                                    }

                                }
                            }
                            setState(140);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(143);
                match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncInfoContext funcInfo() throws RecognitionException {
        FuncInfoContext _localctx = new FuncInfoContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_funcInfo);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(146);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LinkageType) {
                    {
                        setState(145);
                        match(LinkageType);
                    }
                }

                setState(149);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == PreemptionSpecifiers) {
                    {
                        setState(148);
                        match(PreemptionSpecifiers);
                    }
                }

                setState(152);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == VisibilityStyles) {
                    {
                        setState(151);
                        match(VisibilityStyles);
                    }
                }

                setState(154);
                type(0);
                setState(155);
                match(GlobalReg);
                setState(156);
                match(T__10);
                setState(171);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << IntType) | (1L << VoidType) | (1L << LabelType) | (1L << LocalReg))) != 0)) {
                    {
                        setState(157);
                        type(0);
                        setState(159);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (_la == LocalReg) {
                            {
                                setState(158);
                                match(LocalReg);
                            }
                        }

                        setState(168);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__8) {
                            {
                                {
                                    setState(161);
                                    match(T__8);
                                    setState(162);
                                    type(0);
                                    setState(164);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                    if (_la == LocalReg) {
                                        {
                                            setState(163);
                                            match(LocalReg);
                                        }
                                    }

                                }
                            }
                            setState(170);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(173);
                match(T__11);
                setState(175);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == UnnamedAddr) {
                    {
                        setState(174);
                        match(UnnamedAddr);
                    }
                }

                setState(178);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == FuncAttr) {
                    {
                        setState(177);
                        match(FuncAttr);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncDeclContext funcDecl() throws RecognitionException {
        FuncDeclContext _localctx = new FuncDeclContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_funcDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(180);
                match(T__12);
                setState(181);
                funcInfo();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncDefContext funcDef() throws RecognitionException {
        FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_funcDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(183);
                match(T__13);
                setState(184);
                funcInfo();
                setState(185);
                match(T__7);
                setState(189);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == Identifier) {
                    {
                        {
                            setState(186);
                            basicBlock();
                        }
                    }
                    setState(191);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(192);
                match(T__9);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BasicBlockContext basicBlock() throws RecognitionException {
        BasicBlockContext _localctx = new BasicBlockContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_basicBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                match(Identifier);
                setState(195);
                match(T__14);
                setState(199);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__38) | (1L << T__39) | (1L << T__44) | (1L << T__45) | (1L << LocalReg))) != 0)) {
                    {
                        {
                            setState(196);
                            instruction();
                        }
                    }
                    setState(201);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InstDestContext instDest() throws RecognitionException {
        InstDestContext _localctx = new InstDestContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_instDest);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(202);
                match(LocalReg);
                setState(203);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GepOffsetContext gepOffset() throws RecognitionException {
        GepOffsetContext _localctx = new GepOffsetContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_gepOffset);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(205);
                match(T__8);
                setState(206);
                type(0);
                setState(207);
                atom();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PhiBranchContext phiBranch() throws RecognitionException {
        PhiBranchContext _localctx = new PhiBranchContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_phiBranch);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(209);
                match(T__15);
                setState(210);
                atom();
                setState(211);
                match(T__8);
                setState(212);
                atom();
                setState(213);
                match(T__16);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CmpOpContext cmpOp() throws RecognitionException {
        CmpOpContext _localctx = new CmpOpContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_cmpOp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(215);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BinaryOpContext binaryOp() throws RecognitionException {
        BinaryOpContext _localctx = new BinaryOpContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_binaryOp);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(217);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InstructionContext instruction() throws RecognitionException {
        InstructionContext _localctx = new InstructionContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_instruction);
        int _la;
        try {
            setState(329);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 35, _ctx)) {
                case 1:
                    _localctx = new AllocaContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(219);
                    instDest();
                    setState(220);
                    match(T__33);
                    setState(221);
                    type(0);
                    setState(223);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == T__8) {
                        {
                            setState(222);
                            alignment();
                        }
                    }

                }
                break;
                case 2:
                    _localctx = new BinaryContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(225);
                    instDest();
                    setState(226);
                    binaryOp();
                    setState(227);
                    type(0);
                    {
                        setState(228);
                        ((BinaryContext) _localctx).lsrc = atom();
                    }
                    setState(229);
                    match(T__8);
                    {
                        setState(230);
                        ((BinaryContext) _localctx).rsrc = atom();
                    }
                }
                break;
                case 3:
                    _localctx = new BitcastContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(232);
                    instDest();
                    setState(233);
                    match(T__34);
                    setState(234);
                    type(0);
                    {
                        setState(235);
                        ((BitcastContext) _localctx).src = atom();
                    }
                    setState(236);
                    match(T__35);
                    setState(237);
                    type(0);
                }
                break;
                case 4:
                    _localctx = new TruncContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(239);
                    instDest();
                    setState(240);
                    match(T__36);
                    setState(241);
                    type(0);
                    {
                        setState(242);
                        ((TruncContext) _localctx).src = atom();
                    }
                    setState(243);
                    match(T__35);
                    setState(244);
                    type(0);
                }
                break;
                case 5:
                    _localctx = new ZextContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(246);
                    instDest();
                    setState(247);
                    match(T__37);
                    setState(248);
                    type(0);
                    {
                        setState(249);
                        ((ZextContext) _localctx).src = atom();
                    }
                    setState(250);
                    match(T__35);
                    setState(251);
                    type(0);
                }
                break;
                case 6:
                    _localctx = new BrContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(253);
                    match(T__38);
                    setState(254);
                    type(0);
                    {
                        setState(255);
                        ((BrContext) _localctx).src = atom();
                    }
                    setState(256);
                    match(T__8);
                    setState(257);
                    type(0);
                    setState(258);
                    atom();
                    setState(259);
                    match(T__8);
                    setState(260);
                    type(0);
                    setState(261);
                    atom();
                }
                break;
                case 7:
                    _localctx = new BrContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(263);
                    match(T__38);
                    setState(264);
                    type(0);
                    setState(265);
                    atom();
                }
                break;
                case 8:
                    _localctx = new CallContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(268);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LocalReg) {
                        {
                            setState(267);
                            instDest();
                        }
                    }
